[main] Update Spring Hibernate CRUD with Spring Security

--- a/StudentManagementCRUDWithSpringSecurity/src/main/webapp/WEB-INF/layout/student-view.xml
+++ b/StudentManagementCRUDWithSpringSecurity/src/main/webapp/WEB-INF/layout/student-view.xml
@@ -3,6 +3,7 @@
        "-//Apache Software Foundation//DTD Tiles Configuration 3.0//EN"
        "http://tiles.apache.org/dtds/tiles-config_3_0.dtd">
 <tiles-definitions>
+    <!-- Student view -->
     <definition name="students" extends="classic">
         <put-attribute name="title"
             value="Student Management"></put-attribute>
@@ -10,11 +11,13 @@
         <put-attribute name="body"
             value="/WEB-INF/pages/student/students.jsp"></put-attribute>
     </definition>
+    <!-- Changes view -->
     <definition name="changes" extends="classic">
         <put-attribute name="title" value="Manager"></put-attribute>
         <put-attribute name="menu" value="/WEB-INF/pages/common/inc/menu.jsp"></put-attribute>
         <put-attribute name="body" value="/WEB-INF/pages/student/changes.jsp"></put-attribute>
     </definition>
+    <!-- Login view -->
     <definition name="logins" extends="classic">
         <put-attribute name="title" value="Login"></put-attribute>
         <put-attribute name="body" value="/WEB-INF/pages/registration/logins.jsp"></put-attribute>
